--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,25 @@
 .font-second {
   font-family: "Work Sans", sans-serif;
 }
+
+.calculator {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+}
+
+.button-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+.plus-sign {
+  height: 100%;
+  grid-area: 4 / 4 / 6 / 4;
+}
