--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,6 @@
   src: url("digital-7.regular.ttf");
 }
 
-.font-check {
-  font-family: Digital, sans-serif;
-}
-
 .font-second {
   font-family: "Work Sans", sans-serif;
 }
@@ -14,12 +10,35 @@
 .calculator {
   border: 1px solid #ccc;
   background: #eaeaea;
-  border-radius: 5px;
+  border-radius: 1rem;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 225px;
+  width: 250px;
+  padding: 5px;
+  box-shadow: 0 4px 5px 2px rgb(134, 134, 134);
+}
+
+.screen {
+  width: 90%;
+  height: 50px;
+  background: #bdc499;
+  margin: 30px auto 5px;
+  border-radius: 0.25rem;
+  box-shadow:
+    0 -1px 0 2px #90957a,
+    0 -1px 0 2.5px #e0e0e0,
+    0 -2px 2px 5px rgb(184, 184, 184);
+}
+
+.display {
+  font-family: Digital, sans-serif;
+  width: 100%;
+  text-align: right;
+  font-size: 2.5em;
+  padding-top: 5px;
+  padding-right: 5px;
 }
 
 .button-container {
